--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
-@font-face {
-  font-family: "NotoSansCJKjp";
-  font-style: normal;
-  font-weight: 400;
-  src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff2) format('woff2'), url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.woff) format('woff'), url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-Regular.otf) format('opentype');
-}
-
 body{
-  font-family: "NotoSansCJKjp","Segoe UI",Arial,sans-serif;
+  font-family: "Segoe UI",Arial,sans-serif;
   font-size: 20px;
 }
 
@@ -19,4 +12,5 @@ body{
 
 #header{
   font-size: 40px;
+  padding-bottom:20px;
 }
